Phase 2 Extended: Security Analysis & RWX Detection
New Features:
- RWX Section Detection (critical vulnerability indicator)
- Security Mitigations Analysis (ASLR, DEP, CFG, SEH, High Entropy ASLR)
- Section-level entropy calculation
- Code cave detection (potential injection points)
- Security scoring system (0-100)
- Threat assessment (Well Protected -> Highly Exploitable)

Security Features Detected:
- ASLR (Address Space Layout Randomization)
- DEP/NX (Data Execution Prevention)
- CFG (Control Flow Guard)
- SEH (Structured Exception Handling)
- High Entropy ASLR (64-bit)

Section Analysis:
- Memory permissions (R/W/X)
- Per-section entropy
- RWX detection (RED FLAG)
- WX detection (HIGH RISK)

Code Cave Detection:
- Minimum 100 byte null sequences
- Potential payload injection points
- Limited to first 1MB for performance

Tested with putty.exe (1.7MB):
- Security Score: 50/100 (Poorly Protected)
- 10 sections analyzed
- 4 code caves detected
- No RWX sections (secure)
- ASLR + DEP enabled, CFG disabled

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ set(SOURCES
     src/pe_parser.cpp
     src/cli_parser.cpp
     src/import_analyzer.cpp
+    src/security_analyzer.cpp
 )
 
 # Include directories
